Adds icons, fixed design.

--- a/index.html
+++ b/index.html
@@ -143,19 +143,22 @@
 
     <div id="communication-app" class="step text-center" data-x="+=0" data-y="+=1000">
         <h2>Une application de communication</h2>
-        <img src="img/status_user-available.svg" class="komunikado-icon" alt="">
+        <img src="img/status_user-available.svg" class="heading-icon" alt="">
     </div>
 
     <div id="privacy" class="step text-center" data-x="+=0" data-y="+=1000">
         <h2>Le problème de la vie privée</h2>
+        <img src="img/status_changes-prevent-symbolic.svg" class="heading-icon" alt="">
     </div>
 
     <div id="open-web-app" class="step text-center" data-x="+=0" data-y="+=1000">
         <h2>Une application Web ouverte</h2>
+        <img src="img/apps_web-browser-symbolic.svg" class="heading-icon" alt="">
     </div>
 
     <div id="under-the-hood" class="step text-center" data-x="+=0" data-y="+=1000">
         <h1>2. Sous le capot</h1>
+        <img src="img/actions_system-run-symbolic.svg" class="heading-icon" alt="">
     </div>
 
     <div id="p2p" class="step text-center" data-x="+=0" data-y="+=1000">
@@ -164,16 +167,24 @@
 
     <div id="signaling" class="step text-center" data-x="+=0" data-y="+=1000">
         <h2>Le serveur de signalement</h2>
-        <p>Contrôle de session, réseau et métadonnées</p>
-
-        <div class="row">
-            <div class="col-md-4"><h3>Contrôle de session</h3><small>Connexion, déconnexion, gestion des erreurs</small></div>
-            <div class="col-md-4"><h3>Réseau</h3><small>Listage d'autres pairs, récupération de leurs adresses IP</small></div>
-            <div class="col-md-4"><h3>Capacités du navigateur</h3><small>Codecs (audio/vidéo) et résolutions supportées par le pair distant</small></div>
-        </div>
     </div>
 
-    <div id="ice" class="step text-center" data-x="+=0" data-y="+=1000">
+    <div id="signaling-sessions" class="step text-center" data-x="+=0" data-y="+=300">
+        <h3>Contrôle des sessions</h3>
+        <p>Connexion, déconnexion, gestion des erreurs</p>
+    </div>
+
+    <div id="signaling-network" class="step text-center" data-x="+=1000" data-y="+=0">
+        <h3>Réseau</h3>
+        <p>Listage d'autres pairs, récupération de leurs adresses IP</p>
+    </div>
+
+    <div id="signaling-capacities" class="step text-center" data-x="+=1000" data-y="+=0">
+        <h3>Capacités du navigateur</h3>
+        <p>Codecs (audio/vidéo) et résolutions supportées par le pair distant</p>
+    </div>
+
+    <div id="ice" class="step text-center" data-x="+=0" data-y="+=1000" data-rotate="+=90">
         <h2>ICE : trouver des pairs</h2>
         <a href="http://www.html5rocks.com/en/tutorials/webrtc/basics/#ice">HTML5 rocks</a>
     </div>
@@ -183,8 +194,10 @@
         <a href="http://io13webrtc.appspot.com/#44">Google I/O</a>
     </div>
 
-    <div id="stun-n-turn" class="step text-center" data-x="+=0" data-y="+=1000">
-        <h2>Et &agrave; propos de la s&eacute;curit&eacute;</h2>
+    <div id="security" class="step text-center" data-x="+=0" data-y="+=1000">
+        <h2>Et &agrave; propos de la s&eacute;curit&eacute; ?</h2>
+        <img src="img/status_security-medium-symbolic.svg" class="heading-icon" alt="">
+        <br />
         <a href="http://io13webrtc.appspot.com/#53">Google I/O</a>
     </div>
 
